--- a/src/components/Ethos/Ethos.scss
+++ b/src/components/Ethos/Ethos.scss
@@ -1,63 +1,133 @@
 .ethos {
-  padding-top: 0px;
-  padding-bottom: 100px;
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  &__header {
+  @media screen and (max-width: 478px) {
+    padding-top: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
 
-    h4 {
-      color: #9831c0;
-      font-size: 18px;
-      margin: 0px;
+    &__header {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      padding-left: 15px;
+      padding-right: 15px;
+
+      h4 {
+        color: #9831c0;
+        font-size: 16px;
+        margin: 0px;
+      }
+
+      h1 {
+        margin-top: 20px;
+        margin-bottom: 50px;
+        font-size: 30px;
+        text-align: center;
+        width: 70vw;
+      }
     }
 
-    h1 {
-      margin-top: 20px;
-      margin-bottom: 50px;
-      font-size: 50px;
+    &__pack {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+    }
+
+    &__card {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      border: 0.5px lightgray solid;
+      border-top-left-radius: 50px;
+      border-bottom-right-radius: 50px;
+
+      width: 70vw;
+      padding: 40px;
+      padding-left: 20px;
+      padding-right: 20px;
+
+      img {
+        width: 60px;
+      }
+
+      h4 {
+        margin: 15px;
+        margin-left: 0px;
+        margin-right: 0px;
+        font-size: 20px;
+      }
+
+      p {
+        margin: 0px;
+        width: 250px;
+        text-align: center;
+      }
     }
   }
 
-  &__pack {
-    display: flex;
-    gap: 50px;
-  }
+  @media screen and (min-width: 1185px) and (max-width: 2000px) {
+    padding-top: 0px;
+    padding-bottom: 100px;
 
-  &__card {
     display: flex;
     flex-direction: column;
     align-items: center;
 
-    border: 0.5px lightgray solid;
-    border-top-left-radius: 50px;
-    border-bottom-right-radius: 50px;
+    &__header {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
 
-    width: fit-content;
-    padding: 40px;
-    padding-left: 20px;
-    padding-right: 20px;
+      h4 {
+        color: #9831c0;
+        font-size: 18px;
+        margin: 0px;
+      }
 
-    img {
-      width: 60px;
+      h1 {
+        margin-top: 20px;
+        margin-bottom: 50px;
+        font-size: 50px;
+      }
     }
 
-    h4 {
-      margin: 15px;
-      margin-left: 0px;
-      margin-right: 0px;
-      font-size: 20px;
+    &__pack {
+      display: flex;
+      gap: 50px;
     }
 
-    p {
-      margin: 0px;
-      width: 250px;
-      text-align: center;
+    &__card {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      border: 0.5px lightgray solid;
+      border-top-left-radius: 50px;
+      border-bottom-right-radius: 50px;
+
+      width: fit-content;
+      padding: 40px;
+      padding-left: 20px;
+      padding-right: 20px;
+
+      img {
+        width: 60px;
+      }
+
+      h4 {
+        margin: 15px;
+        margin-left: 0px;
+        margin-right: 0px;
+        font-size: 20px;
+      }
+
+      p {
+        margin: 0px;
+        width: 250px;
+        text-align: center;
+      }
     }
   }
 }
