--- a/src/components/FooterNotes/FooterNotes.scss
+++ b/src/components/FooterNotes/FooterNotes.scss
@@ -1,72 +1,159 @@
 .footerNotes {
-  display: flex;
-  justify-content: center;
-  padding: 50px;
-  padding-top: 0px;
-
-  :last-child {
-  }
-
-  &__header {
-    list-style: none;
-    padding: 0;
+  @media screen and (max-width: 478px) {
     display: flex;
-    gap: 15px;
+    flex-direction: column-reverse;
     align-items: center;
+    // align-items: center;
 
-    :first-child {
-      width: 40px;
-    }
-
-    .title {
-      font-size: 20px;
-      width: 20px;
-    }
-  }
-
-  p {
-    width: 300px;
-  }
-
-  h4 {
-    color: #9831c0;
-    font-weight: normal;
-  }
-
-  &__sMedia {
-    display: flex;
-    gap: 10px;
-  }
-
-  .workHour {
-    padding-left: 50px;
-    padding-right: 50px;
     &__header {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+
       display: flex;
-      justify-content: center;
+      align-items: center;
+      gap: 15px;
+
+      margin-top: 40px;
+
+      :first-child {
+        width: 40px;
+      }
+
+      .title {
+        font-size: 20px;
+      }
     }
 
-    &__weekday {
+    &__face {
       display: flex;
-      gap: 50px;
-      ul {
-        list-style: none;
-        padding: 0;
+      flex-direction: column;
+      align-items: center;
 
-        li {
-          margin-bottom: 5px;
+      img {
+        padding: 0;
+        margin: 0;
+      }
+
+      p {
+        width: 80vw;
+        text-align: center;
+      }
+
+      .footerNotes__sMedia {
+        display: flex;
+        gap: 4vw;
+        margin-bottom: 20px;
+      }
+    }
+
+    .workHour {
+      width: 80vw;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding-left: 10vw;
+      padding-right: 10vw;
+
+      &__weekday {
+        display: flex;
+        gap: 2vw;
+
+        ul {
+          list-style: none;
+          padding: 0;
+
+          li {
+            margin-bottom: 5px;
+          }
         }
+      }
+    }
+
+    .contact {
+      margin-top: 40px;
+      h2 {
+        display: flex;
+        justify-content: center;
+      }
+      p {
+        width: 80vw;
+        text-align: center;
+      }
+
+      :last-child {
+        margin-bottom: 40px;
       }
     }
   }
 
-  .contact {
-    padding: 20px;
-    padding-top: 0;
-    padding-bottom: 0;
+  @media screen and (min-width: 1185px) and (max-width: 2000px) {
+    display: flex;
+    justify-content: center;
+    padding: 50px;
+    padding-top: 0px;
+
+    &__header {
+      list-style: none;
+      padding: 0;
+      display: flex;
+      gap: 15px;
+      align-items: center;
+
+      :first-child {
+        width: 40px;
+      }
+
+      .title {
+        font-size: 20px;
+        width: 20px;
+      }
+    }
 
     p {
-      width: 200px;
+      width: 300px;
+    }
+
+    h4 {
+      color: #9831c0;
+      font-weight: normal;
+    }
+
+    &__sMedia {
+      display: flex;
+      gap: 10px;
+    }
+
+    .workHour {
+      padding-left: 50px;
+      padding-right: 50px;
+      &__header {
+        display: flex;
+        justify-content: center;
+      }
+
+      &__weekday {
+        display: flex;
+        gap: 50px;
+        ul {
+          list-style: none;
+          padding: 0;
+
+          li {
+            margin-bottom: 5px;
+          }
+        }
+      }
+    }
+
+    .contact {
+      padding: 20px;
+      padding-top: 0;
+      padding-bottom: 0;
+
+      p {
+        width: 200px;
+      }
     }
   }
 }
