--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -1,60 +1,134 @@
 .hero {
-  padding: 220px;
-  padding-top: 0px;
-  padding-top: 10px;
-  padding-bottom: 20px;
-
-  display: flex;
-  gap: 50px;
-
-  &__detail {
-    h1 {
-      font-size: 60px;
-      width: 100px;
-      margin: 0px;
-      letter-spacing: 3px;
-    }
-
-    p {
-      margin: 10px;
-      margin-left: 0px;
-      width: 300px;
-      line-height: 25px;
-      font-size: 17px;
-    }
-
-    button {
-      margin-top: 15px;
-      margin-bottom: 25px;
-
-      border: none;
-      border-radius: 50px;
-      padding: 10px;
-      width: 150px;
-      height: 50px;
-
-      background-color: #9831c0;
-      color: white;
-      font-size: 14px;
-    }
-
-    &--smedia {
+  @media screen and (max-width: 478px) {
+    &__detail {
       display: flex;
+      flex-direction: column;
       align-items: center;
-      gap: 10px;
+
+      h1 {
+        font-size: 40px;
+        width: 200px;
+        text-align: center;
+        margin-top: 35px;
+        letter-spacing: 2px;
+        margin-bottom: 0px;
+        color: white;
+
+        margin-left: auto;
+        margin-right: auto;
+
+        font-family: 'Arial';
+      }
+
+      p {
+        width: 240px;
+        line-height: 25px;
+        font-size: 16px;
+        color: white;
+        margin-top: 20px;
+        font-weight: normal;
+
+        font-family: Arial, Helvetica, sans-serif;
+
+        margin-left: auto;
+        margin-right: auto;
+
+        text-align: center;
+      }
+
+      button {
+        margin-top: 15px;
+        margin-bottom: 25px;
+
+        border: none;
+        border-radius: 50px;
+        padding: 10px;
+        width: 150px;
+        height: 50px;
+
+        background-color: #9831c0;
+        color: white;
+        font-size: 14px;
+      }
+
+      &--smedia {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+      }
+    }
+
+    &__image {
+      img {
+        filter: brightness(25%);
+
+        position: absolute;
+        top: 0;
+        right: 0px;
+        z-index: -1;
+        width: 800px;
+      }
     }
   }
 
-  &__image {
-    img {
-      width: 800px;
+  @media screen and (min-width: 1185px) and (max-width: 2000px) {
+    padding: 220px;
+    padding-top: 0px;
+    padding-top: 10px;
+    padding-bottom: 20px;
 
-      position: absolute;
-      z-index: -1;
-      right: 0;
-      top: 0;
+    display: flex;
+    gap: 50px;
 
-      border-bottom-left-radius: 250px;
+    &__detail {
+      h1 {
+        font-size: 60px;
+        width: 100px;
+        margin: 0px;
+        letter-spacing: 3px;
+      }
+
+      p {
+        margin: 10px;
+        margin-left: 0px;
+        width: 300px;
+        line-height: 25px;
+        font-size: 17px;
+      }
+
+      button {
+        margin-top: 15px;
+        margin-bottom: 25px;
+
+        border: none;
+        border-radius: 50px;
+        padding: 10px;
+        width: 150px;
+        height: 50px;
+
+        background-color: #9831c0;
+        color: white;
+        font-size: 14px;
+      }
+
+      &--smedia {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+      }
+    }
+
+    &__image {
+      img {
+        width: 800px;
+
+        position: absolute;
+        z-index: -1;
+        right: 0;
+        top: 0;
+
+        border-bottom-left-radius: 250px;
+      }
     }
   }
 }
