--- a/src/components/Testimonials/Testimonial.scss
+++ b/src/components/Testimonials/Testimonial.scss
@@ -1,72 +1,146 @@
 .testimonial {
-  padding-top: 80px;
-  padding-bottom: 150px;
-  &__header {
+  @media screen and (max-width: 478px) {
+    padding: 20px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    justify-content: center;
 
-    h4 {
-      margin: 0;
-      font-size: 18px;
-      color: #9831c0;
+    &__header {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-top: 70px;
+
+      h4 {
+        margin: 0;
+        font-size: 18px;
+        color: #9831c0;
+      }
+
+      h1 {
+        font-size: 40px;
+        margin-bottom: 35px;
+        font-family: Arial, Helvetica, sans-serif;
+        text-align: center;
+        width: 80vw;
+      }
     }
 
-    h1 {
-      font-size: 50px;
-      margin-bottom: 60px;
+    &__card {
+      &--comment {
+        p {
+          margin-top: 0px;
+          font-size: 18px;
+          width: 70vwpx;
+          text-align: center;
+          line-height: 30px;
+          margin-left: auto;
+          margin-right: auto;
+        }
+
+        .userInfo {
+          display: flex;
+          justify-content: center;
+          margin-bottom: 50px;
+
+          ul {
+            list-style: none;
+            padding-left: 10px;
+
+            :first-child {
+              font-size: 18px;
+              font-weight: bold;
+            }
+
+            :last-child {
+              font-size: 14px;
+              margin-top: 5px;
+            }
+          }
+
+          img {
+            width: 40px;
+          }
+        }
+      }
+
+      &--photo {
+        display: none;
+      }
     }
   }
 
-  &__card {
-    width: fit-content;
+  @media screen and (min-width: 1185px) and (max-width: 2000px) {
+    padding-top: 80px;
+    padding-bottom: 150px;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    &__header {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
 
-    gap: 50px;
-    margin-left: auto;
-    margin-right: auto;
-
-    &--comment {
-      p {
-        font-size: 20px;
-        width: 400px;
-        text-align: center;
-        line-height: 30px;
-        margin-left: auto;
-        margin-right: auto;
+      h4 {
+        margin: 0;
+        font-size: 18px;
+        color: #9831c0;
       }
 
-      .userInfo {
-        display: flex;
-        justify-content: center;
-        ul {
-          list-style: none;
-          padding-left: 10px;
-
-          :first-child {
-            font-size: 18px;
-            font-weight: bold;
-          }
-
-          :last-child {
-            font-size: 14px;
-            margin-top: 5px;
-          }
-        }
-
-        img {
-          width: 40px;
-        }
+      h1 {
+        font-size: 50px;
+        margin-bottom: 60px;
       }
     }
 
-    &--photo {
-      height: 350px;
-      border-top-left-radius: 80px;
-      border-bottom-right-radius: 80px;
+    &__card {
+      width: fit-content;
+
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      gap: 50px;
+      margin-left: auto;
+      margin-right: auto;
+
+      &--comment {
+        p {
+          font-size: 20px;
+          width: 400px;
+          text-align: center;
+          line-height: 30px;
+          margin-left: auto;
+          margin-right: auto;
+        }
+
+        .userInfo {
+          display: flex;
+          justify-content: center;
+          ul {
+            list-style: none;
+            padding-left: 10px;
+
+            :first-child {
+              font-size: 18px;
+              font-weight: bold;
+            }
+
+            :last-child {
+              font-size: 14px;
+              margin-top: 5px;
+            }
+          }
+
+          img {
+            width: 40px;
+          }
+        }
+      }
+
+      &--photo {
+        height: 350px;
+        border-top-left-radius: 80px;
+        border-bottom-right-radius: 80px;
+      }
     }
   }
 }
