--- a/src/components/WhySushi/WhySushi.scss
+++ b/src/components/WhySushi/WhySushi.scss
@@ -1,43 +1,94 @@
 .whySushi {
-  padding: 220px;
-  padding-top: 100px;
-  padding-bottom: 100px;
+  @media screen and (max-width: 478px) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-  display: flex;
-  gap: 60px;
+    img {
+      margin-top: 50px;
+      width: 90%;
+    }
 
-  img {
-    width: 550px;
+    &__display {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      h4 {
+        color: #9831c0;
+      }
+
+      h1 {
+        width: 70vw;
+        font-size: 30px;
+        margin: 0px;
+        text-align: center;
+      }
+
+      p {
+        line-height: 22px;
+        text-align: center;
+        width: 70vw;
+      }
+
+      button {
+        margin-top: 15px;
+        margin-bottom: 25px;
+
+        border: none;
+        border-radius: 50px;
+        padding: 10px;
+        width: 130px;
+        height: 50px;
+
+        background-color: #9831c0;
+        color: white;
+        font-size: 12px;
+      }
+    }
   }
 
-  &__display {
-    h4 {
-      color: #9831c0;
+  @media screen and (min-width: 1185px) and (max-width: 2000px) {
+    padding: 220px;
+    padding-top: 100px;
+    padding-bottom: 100px;
+
+    display: flex;
+    gap: 60px;
+
+    img {
+      width: 550px;
     }
 
-    h1 {
-      width: 300px;
-      font-size: 40px;
-      margin: 0px;
-    }
+    &__display {
+      h4 {
+        color: #9831c0;
+      }
 
-    p {
-      line-height: 25px;
-    }
+      h1 {
+        width: 300px;
+        font-size: 40px;
+        margin: 0px;
+      }
 
-    button {
-      margin-top: 15px;
-      margin-bottom: 25px;
+      p {
+        line-height: 25px;
+      }
 
-      border: none;
-      border-radius: 50px;
-      padding: 10px;
-      width: 150px;
-      height: 50px;
+      button {
+        margin-top: 15px;
+        margin-bottom: 25px;
 
-      background-color: #9831c0;
-      color: white;
-      font-size: 14px;
+        border: none;
+        border-radius: 50px;
+        padding: 10px;
+        width: 150px;
+        height: 50px;
+
+        background-color: #9831c0;
+        color: white;
+        font-size: 14px;
+      }
     }
   }
 }
