--- a/src/components/Subscribe/Subscribe.scss
+++ b/src/components/Subscribe/Subscribe.scss
@@ -1,5 +1,5 @@
 .subscribe {
-  @media screen and (max-width: 478px) {
+  @media screen and (max-width: 576px) {
     background-color: rgb(34, 34, 34);
     color: white;
     padding: 30px;
@@ -20,11 +20,17 @@
       p {
         margin-bottom: 30px;
       }
+
+      &__email {
+        display: flex;
+        align-items: center;
+      }
+
       input {
         padding: 10px;
         border-radius: 10px;
-        width: 65vw;
         height: 30px;
+        width: 80vw;
       }
 
       button {
@@ -40,7 +46,7 @@
         margin-bottom: 35px;
         font-size: 12px;
 
-        transform: translate(20vw, -46px);
+        transform: translate(32vw, -46px);
       }
     }
   }
