--- a/src/components/Ethos/Ethos.scss
+++ b/src/components/Ethos/Ethos.scss
@@ -1,5 +1,5 @@
 .ethos {
-  @media screen and (max-width: 576px) {
+  @media screen and (max-width: 700px) {
     padding-top: 100px;
     display: flex;
     flex-direction: column;
@@ -67,7 +67,71 @@
     }
   }
 
-  @media screen and (min-width: 1185px) and (max-width: 2000px) {
+  @media screen and (min-width: 701px) and (max-width: 995px) {
+    padding-top: 0px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    &__header {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      h4 {
+        color: #9831c0;
+        font-size: 20px;
+        margin: 0px;
+      }
+
+      h1 {
+        margin-top: 20px;
+        margin-bottom: 50px;
+        font-size: 5vw;
+      }
+    }
+
+    &__pack {
+      display: flex;
+      gap: 40px;
+    }
+
+    &__card {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      border: 0.5px lightgray solid;
+      border-top-left-radius: 50px;
+      border-bottom-right-radius: 50px;
+
+      width: 20vw;
+      padding: 40px;
+      padding-left: 20px;
+      padding-right: 20px;
+
+      img {
+        width: 5vw;
+      }
+
+      h4 {
+        margin: 15px;
+        margin-left: 0px;
+        margin-right: 0px;
+        font-size: 2.5vw;
+      }
+
+      p {
+        margin: 0px;
+
+        text-align: center;
+        font-size: 1.8vw;
+      }
+    }
+  }
+
+  @media screen and (min-width: 996px) and (max-width: 1935px) {
     padding-top: 0px;
     padding-bottom: 100px;
 
