--- a/src/components/FoodGrid/FoodGrid.scss
+++ b/src/components/FoodGrid/FoodGrid.scss
@@ -1,5 +1,5 @@
 .grid {
-  @media screen and (max-width: 576px) {
+  @media screen and (max-width: 650px) {
     padding-top: 150px;
 
     &__header {
@@ -30,7 +30,7 @@
       flex-direction: column;
       align-items: center;
 
-      gap: 28vw;
+      gap: 30vw;
     }
 
     &__card {
@@ -47,7 +47,7 @@
         opacity: 80%;
         transform: translate(0px, -20vw);
         width: 80vw;
-        min-height: 25vw;
+        min-height: 20vw;
       }
 
       &--header {
@@ -100,7 +100,103 @@
     }
   }
 
-  @media screen and (min-width: 1185px) and (max-width: 2000px) {
+  @media screen and (min-width: 651px) and (max-width: 1005px) {
+    padding: 200px;
+    padding-top: 100px;
+    padding-bottom: 100px;
+
+    &__header {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      h4 {
+        margin: 0;
+        font-size: 18px;
+        color: #9831c0;
+      }
+
+      h1 {
+        font-size: 5vw;
+        margin-bottom: 60px;
+        width: 70vw;
+        text-align: center;
+      }
+    }
+
+    section {
+      display: grid;
+      grid-template-columns: 30vw 30vw;
+
+      justify-content: center;
+      gap: 100px;
+    }
+
+    &__card {
+      height: 180px;
+
+      .bkgrImg {
+        width: 35vw;
+        border-top-left-radius: 30px;
+        border-bottom-right-radius: 30px;
+      }
+
+      .background {
+        background-color: white;
+        opacity: 92%;
+        transform: translate(0px, -80px);
+        height: 100px;
+        width: 35vw;
+        min-height: 0vw;
+      }
+
+      &--header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 20px;
+        padding-top: 0px;
+        padding-bottom: 0px;
+
+        h3,
+        h4 {
+          margin-bottom: 5px;
+        }
+      }
+
+      &--rating {
+        list-style: none;
+        display: flex;
+        align-items: center;
+        gap: 5px;
+        margin: 0;
+        padding-left: 20px;
+
+        img {
+          width: 10px;
+        }
+      }
+    }
+
+    button {
+      margin-top: 8vw;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 20px;
+      height: 50px;
+      background-color: #9831c0;
+      border: none;
+      border-radius: 50px;
+      color: white;
+      font-weight: bold;
+
+      margin-left: auto;
+      margin-right: auto;
+    }
+  }
+
+  @media screen and (min-width: 1006px) and (max-width: 1935px) {
     padding: 200px;
     padding-top: 100px;
     padding-bottom: 100px;
