--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -1,5 +1,5 @@
 .nav {
-  @media screen and (max-width: 576px) {
+  @media screen and (max-width: 650px) {
     background-color: white;
 
     transform: translate(-8px, -20px);
@@ -44,7 +44,52 @@
     }
   }
 
-  @media screen and (min-width: 1185px) and (max-width: 2000px) {
+  @media screen and (min-width: 651px) and (max-width: 1309px) {
+    background-color: white;
+
+    transform: translate(-8px, -20px);
+    width: 96vw;
+    border-bottom-right-radius: 35px;
+
+    padding: 10px;
+    padding-top: 25px;
+    padding-left: 35px;
+    padding-right: 20px;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    &__logo {
+      display: flex;
+      align-items: center;
+      gap: 5px;
+      position: static;
+      margin-left: 10px;
+
+      img {
+        width: 50px;
+      }
+      p {
+        margin: 0;
+        font-size: 25px;
+      }
+    }
+
+    &__button {
+      border: none;
+      border-radius: 20px;
+      padding: 12px;
+      width: 110px;
+      margin-right: 20px;
+
+      background-color: #9831c0;
+      color: white;
+      font-size: 11px;
+    }
+  }
+
+  @media screen and (min-width: 1310px) and (max-width: 1935px) {
     padding: 220px;
     padding-top: 0px;
     padding-top: 10px;
