--- a/src/components/Subscribe/Subscribe.scss
+++ b/src/components/Subscribe/Subscribe.scss
@@ -1,5 +1,5 @@
 .subscribe {
-  @media screen and (max-width: 576px) {
+  @media screen and (max-width: 956px) {
     background-color: rgb(34, 34, 34);
     color: white;
     padding: 30px;
@@ -10,7 +10,9 @@
 
     &__info {
       text-align: center;
-
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       h1,
       p {
         font-family: Arial, Helvetica, sans-serif;
@@ -51,7 +53,63 @@
     }
   }
 
-  @media screen and (min-width: 1185px) and (max-width: 2000px) {
+  @media screen and (min-width: 957px) and (max-width: 1019px) {
+    display: flex;
+    gap: 15vw;
+    align-items: center;
+    height: 320px;
+    width: 90vw;
+
+    background-color: rgb(34, 34, 34);
+    border-top-left-radius: 60px;
+    border-bottom-right-radius: 60px;
+
+    margin-left: auto;
+    margin-right: auto;
+
+    margin-bottom: 100px;
+
+    &__banner {
+      width: 100px;
+      transform: translate(70px, 0px);
+    }
+
+    &__info {
+      color: white;
+      h1 {
+        font-size: 5vw;
+        margin-bottom: 0px;
+        padding: 0px;
+      }
+      p {
+        width: 60vw;
+        margin-bottom: 40px;
+      }
+      input {
+        padding: 10px;
+        border-radius: 10px;
+        width: 400px;
+        height: 30px;
+      }
+
+      button {
+        text-align: center;
+        width: 150px;
+        padding: 10px;
+        height: 40px;
+        background-color: #9831c0;
+        border: none;
+        border-radius: 10px;
+        color: white;
+        font-weight: bold;
+        margin-bottom: 35px;
+
+        transform: translate(-16vw, 1px);
+      }
+    }
+  }
+
+  @media screen and (min-width: 1020px) and (max-width: 1935px) {
     width: fit-content;
     height: fit-content;
     padding-right: 100px;
