--- a/src/components/WhySushi/WhySushi.scss
+++ b/src/components/WhySushi/WhySushi.scss
@@ -1,8 +1,10 @@
 .whySushi {
-  @media screen and (max-width: 576px) {
+  @media screen and (max-width: 750px) {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 50px;
+    margin-top: 50px;
 
     img {
       margin-top: 50px;
@@ -48,12 +50,59 @@
     }
   }
 
-  @media screen and (min-width: 1185px) and (max-width: 2000px) {
+  @media screen and (min-width: 751px) and (max-width: 1039px) {
     padding: 220px;
     padding-top: 100px;
     padding-bottom: 100px;
 
     display: flex;
+    justify-content: center;
+    gap: 30px;
+
+    img {
+      width: 45vw;
+    }
+
+    &__display {
+      h4 {
+        color: #9831c0;
+      }
+
+      h1 {
+        width: 300px;
+        font-size: 4vw;
+        margin: 0px;
+      }
+
+      p {
+        line-height: 25px;
+        width: 250px;
+      }
+
+      button {
+        margin-top: 15px;
+        margin-bottom: 25px;
+
+        border: none;
+        border-radius: 50px;
+        padding: 10px;
+        width: 150px;
+        height: 50px;
+
+        background-color: #9831c0;
+        color: white;
+        font-size: 14px;
+      }
+    }
+  }
+
+  @media screen and (min-width: 1040px) and (max-width: 1935px) {
+    padding: 220px;
+    padding-top: 100px;
+    padding-bottom: 100px;
+
+    display: flex;
+    justify-content: center;
     gap: 60px;
 
     img {
@@ -66,13 +115,14 @@
       }
 
       h1 {
-        width: 300px;
+        width: 400px;
         font-size: 40px;
         margin: 0px;
       }
 
       p {
         line-height: 25px;
+        width: 380px;
       }
 
       button {
