--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -151,7 +151,7 @@
   }
 
   @media screen and (min-width: 1310px) and (max-width: 1935px) {
-    padding: 220px;
+    padding: 15vw;
     padding-top: 0px;
     padding-top: 10px;
     padding-bottom: 20px;
