--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -90,7 +90,7 @@
   }
 
   @media screen and (min-width: 1310px) and (max-width: 1935px) {
-    padding: 220px;
+    padding: 15vw;
     padding-top: 0px;
     padding-top: 10px;
     padding-bottom: 40px;
