--- a/src/components/AboutUs/AboutUs.scss
+++ b/src/components/AboutUs/AboutUs.scss
@@ -274,5 +274,26 @@
         margin: 0px;
       }
     }
+
+    &__card--end {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      img {
+        width: 35px;
+      }
+
+      h4 {
+        margin: 15px;
+        margin-left: 0px;
+        margin-right: 0px;
+        font-size: 20px;
+      }
+
+      p {
+        margin: 0px;
+      }
+    }
   }
 }
